--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
-
+.terraform
 # Crash log files
 crash.log
 crash.*.log
@@ -14,7 +14,7 @@ crash.*.log
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
 #*.tfvars
-*.tfvars.json
+#*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
